chrome/test/data/banners/main.js
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 const Action = {
   VERIFY_APPINSTALLED: 'verify_appinstalled',
+  VERIFY_APPINSTALLED_STASH_EVENT: 'verify_appinstalled_stash_event',
   VERIFY_PROMPT_APPINSTALLED: 'verify_prompt_appinstalled',
   VERIFY_BEFOREINSTALLPROMPT: 'verify_beforeinstallprompt',
   CALL_PROMPT_DELAYED: 'call_prompt_delayed',
@@ -77,6 +78,10 @@ function addPromptListener(action) {
     e.preventDefault();
 
     switch (action) {
+      case Action.VERIFY_APPINSTALLED_STASH_EVENT:
+        stashedEvent = e;
+        verifyEvents('appinstalled');
+        break;
       case Action.CALL_PROMPT_DELAYED:
         setTimeout(callPrompt, 0, e);
         break;
@@ -134,6 +139,7 @@ function initialize() {
       addPromptListener(Action.STASH_EVENT);
       addClickListener(action);
       break;
+    case Action.VERIFY_APPINSTALLED_STASH_EVENT:
     case Action.CALL_PROMPT_DELAYED:
     case Action.CALL_PROMPT_IN_HANDLER:
     case Action.CALL_PROMPT_NO_USERCHOICE:
